[tool.poetry]
name = "aisearch"
version = "0.1.0"
description = ""
authors = ["yiouyou <zhuosong@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "2.6.1"
langchain-openai = "^0.0.5"
langchain-mistralai = "^0.0.4"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
